force-app/main/default/objects/TA_Mig_Target__c/TA_Mig_Target__c.object-meta.xml
<CustomObject>
    <label>TA Mig Target</label>
    <nameField>
        <displayFormat>TMT-{YY}{MM}{00000}</displayFormat>
        <label>TA Mig Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TA Mig Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>