force-app/main/default/objects/TA_Mig_Target__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TA Mig Target</relationshipLabel>
    <relationshipName>TA_Mig_Target</relationshipName>
    <type>Lookup</type>
</CustomField>