force-app/main/default/objects/TA_Mig_Target__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>TA Mig Target</relationshipLabel>
    <relationshipName>TA_Mig_Target</relationshipName>
    <type>Lookup</type>
</CustomField>