force-app/main/default/objects/TA_Mig_Target__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>TA Mig Target</relationshipLabel>
    <relationshipName>TA_Mig_Target</relationshipName>
    <type>Lookup</type>
</CustomField>