force-app/main/default/objects/TA_Mig_Target__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution(c)</label>
    <referenceTo>Solution__c</referenceTo>
    <relationshipLabel>TA Mig Target</relationshipLabel>
    <relationshipName>TA_Mig_Target</relationshipName>
    <type>Lookup</type>
</CustomField>