force-app/main/default/objects/TA_Mig_Target__c/fields/WBS__c.field-meta.xml
<CustomField>
    <fullName>WBS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS</label>
    <referenceTo>WBS__c</referenceTo>
    <relationshipLabel>TA Mig Target</relationshipLabel>
    <relationshipName>TA_Mig_Target</relationshipName>
    <type>Lookup</type>
</CustomField>